fix: prevent scroll on mobile

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,7 +2,7 @@ html,
 body {
   margin: 0;
   height: 100%;
-  overflow: auto;
+  overflow: hidden;
   cursor: none;
   font-family: 'Varela Round', 'PingFang SC', -apple-system, sans-serif;
 }
